Fixes Potential security vulnerability

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -46,7 +46,7 @@ PyPDF2==1.26.0
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.4
-requests==2.18.4
+requests>=2.20.0
 rsa==3.4.2
 six==1.11.0
 SQLAlchemy==1.2.7
